demo/cicd/single-recipe.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbc-news-api-svc
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: bbc-news-api
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbc-news-api-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bbc-news-api
  template:
    metadata:
      labels:
        app: bbc-news-api
    spec:
      containers:
      - name: bbc-news-api
        image: bbc-news-api
        imagePullPolicy: Never # allow to use local docker images which is our case
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            httpHeaders:
              - name: Host
                value: localhost
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            httpHeaders:
              - name: Host
                value: localhost
          initialDelaySeconds: 20
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bbc-news-api-ing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bbc-news-api.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: bbc-news-api-svc
              servicePort: 8080
